--- a/ui/mainwindow.ui
+++ b/ui/mainwindow.ui
@@ -154,9 +154,15 @@
        </attribute>
        <layout class="QGridLayout" name="gridLayout_4" rowstretch="0,1" columnstretch="2,1">
         <item row="0" column="0">
-         <layout class="QVBoxLayout" name="verticalLayout_2" stretch="1">
+         <layout class="QVBoxLayout" name="verticalLayout_2" stretch="0">
           <item>
            <widget class="QGroupBox" name="groupBox_3">
+            <property name="minimumSize">
+             <size>
+              <width>562</width>
+              <height>0</height>
+             </size>
+            </property>
             <property name="title">
              <string>Control</string>
             </property>
@@ -167,6 +173,16 @@
              <property name="verticalSpacing">
               <number>6</number>
              </property>
+             <item row="2" column="0">
+              <widget class="QCheckBox" name="Flog">
+               <property name="text">
+                <string>Full Log </string>
+               </property>
+               <property name="checked">
+                <bool>true</bool>
+               </property>
+              </widget>
+             </item>
              <item row="0" column="0">
               <widget class="QLabel" name="label_6">
                <property name="minimumSize">
@@ -179,42 +195,7 @@
                 <string>0~359</string>
                </property>
                <property name="text">
-                <string>Position Correction</string>
-               </property>
-              </widget>
-             </item>
-             <item row="0" column="6" rowspan="2">
-              <spacer name="horizontalSpacer_8">
-               <property name="orientation">
-                <enum>Qt::Horizontal</enum>
-               </property>
-               <property name="sizeHint" stdset="0">
-                <size>
-                 <width>40</width>
-                 <height>20</height>
-                </size>
-               </property>
-              </spacer>
-             </item>
-             <item row="0" column="1">
-              <widget class="QSpinBox" name="trim">
-               <property name="sizePolicy">
-                <sizepolicy hsizetype="Preferred" vsizetype="Preferred">
-                 <horstretch>0</horstretch>
-                 <verstretch>0</verstretch>
-                </sizepolicy>
-               </property>
-               <property name="minimumSize">
-                <size>
-                 <width>120</width>
-                 <height>0</height>
-                </size>
-               </property>
-               <property name="minimum">
-                <number>1</number>
-               </property>
-               <property name="maximum">
-                <number>359</number>
+                <string>Position Tune</string>
                </property>
               </widget>
              </item>
@@ -234,6 +215,54 @@
                </property>
                <property name="text">
                 <string>Clockwise</string>
+               </property>
+              </widget>
+             </item>
+             <item row="2" column="4">
+              <spacer name="verticalSpacer_3">
+               <property name="orientation">
+                <enum>Qt::Vertical</enum>
+               </property>
+               <property name="sizeType">
+                <enum>QSizePolicy::Expanding</enum>
+               </property>
+               <property name="sizeHint" stdset="0">
+                <size>
+                 <width>20</width>
+                 <height>40</height>
+                </size>
+               </property>
+              </spacer>
+             </item>
+             <item row="0" column="6" rowspan="2">
+              <spacer name="horizontalSpacer_8">
+               <property name="orientation">
+                <enum>Qt::Horizontal</enum>
+               </property>
+               <property name="sizeHint" stdset="0">
+                <size>
+                 <width>40</width>
+                 <height>20</height>
+                </size>
+               </property>
+              </spacer>
+             </item>
+             <item row="0" column="5">
+              <widget class="QPushButton" name="Go">
+               <property name="minimumSize">
+                <size>
+                 <width>120</width>
+                 <height>0</height>
+                </size>
+               </property>
+               <property name="maximumSize">
+                <size>
+                 <width>16777215</width>
+                 <height>16777215</height>
+                </size>
+               </property>
+               <property name="text">
+                <string>Anti-Clockwise</string>
                </property>
               </widget>
              </item>
@@ -348,48 +377,25 @@
                </item>
               </layout>
              </item>
-             <item row="0" column="5">
-              <widget class="QPushButton" name="Go">
+             <item row="0" column="1">
+              <widget class="QSpinBox" name="trim">
+               <property name="sizePolicy">
+                <sizepolicy hsizetype="Preferred" vsizetype="Preferred">
+                 <horstretch>0</horstretch>
+                 <verstretch>0</verstretch>
+                </sizepolicy>
+               </property>
                <property name="minimumSize">
                 <size>
                  <width>120</width>
                  <height>0</height>
                 </size>
                </property>
-               <property name="maximumSize">
-                <size>
-                 <width>16777215</width>
-                 <height>16777215</height>
-                </size>
+               <property name="minimum">
+                <number>1</number>
                </property>
-               <property name="text">
-                <string>Anti-Clockwise</string>
-               </property>
-              </widget>
-             </item>
-             <item row="2" column="4">
-              <spacer name="verticalSpacer_3">
-               <property name="orientation">
-                <enum>Qt::Vertical</enum>
-               </property>
-               <property name="sizeType">
-                <enum>QSizePolicy::Expanding</enum>
-               </property>
-               <property name="sizeHint" stdset="0">
-                <size>
-                 <width>20</width>
-                 <height>40</height>
-                </size>
-               </property>
-              </spacer>
-             </item>
-             <item row="2" column="0">
-              <widget class="QCheckBox" name="Flog">
-               <property name="text">
-                <string>Full Log </string>
-               </property>
-               <property name="checked">
-                <bool>true</bool>
+               <property name="maximum">
+                <number>359</number>
                </property>
               </widget>
              </item>
